# job_raptor

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  README.md  package.json  svelte.config.ts  tsconfig.json
.claw/sessions/: session-1775713926044.json
mock_data/: job-raptor-backup-2026-04-08.json
src/ai/: package.json
src/ai/shared/: parse-job.test.ts  parse-job.ts
src/ui/: app.css  app.html
src/ui/assets/: .ic-assets.json5
src/ui/assets/.well-known/: ii-alternative-origins
src/ui/lib/: paper.test.ts  paper.ts  parser.ts  resume.ts  runtime.ts  types.ts  utils.test.ts  utils.ts
src/ui/lib/components/: AddJobModal.svelte  AnalyticsPanel.svelte  ApplicationsTable.svelte  FilterBar.svelte  KanbanBoard.svelte  MetricCard.svelte  PaperStudio.svelte  StatusBadge.svelte
src/ui/lib/data/: demo.ts
src/ui/lib/local/: persistence.test.ts  persistence.ts
src/ui/lib/stores/: applications.ts
src/ui/routes/: +page.svelte
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: lib.rs  main.rs
