[package]
name = "jobflow-desktop"
version = "0.1.0"
description = "Desktop wrapper for the JobFlow dashboard"
authors = ["JobFlow"]
edition = "2021"

[lib]
name = "jobflow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
url = "2"
